--- a/ProjectManagement.Repository/ProjectManagement.Repository.csproj
+++ b/ProjectManagement.Repository/ProjectManagement.Repository.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProjectManagement.Data\ProjectManagement.Data.csproj" />
+    <ProjectReference Include="..\ProjectManagement.ViewModel\ProjectManagement.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
