--- a/ProjectManagement.Data/ProjectManagement.Data.csproj
+++ b/ProjectManagement.Data/ProjectManagement.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201122043148_AddDataToProjectSectorTabel.cs" />
+    <Compile Remove="Migrations\20201122043148_AddDataToProjectSectorTabel.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
   </ItemGroup>
