--- a/ProjectManagement.Data/ProjectManagement.Data.csproj
+++ b/ProjectManagement.Data/ProjectManagement.Data.csproj
@@ -7,6 +7,10 @@
   <ItemGroup>
     <Compile Remove="Migrations\20201122043148_AddDataToProjectSectorTabel.cs" />
     <Compile Remove="Migrations\20201122043148_AddDataToProjectSectorTabel.Designer.cs" />
+    <Compile Remove="Migrations\20201122055432_AddRole.cs" />
+    <Compile Remove="Migrations\20201122055432_AddRole.Designer.cs" />
+    <Compile Remove="Migrations\20201122060939_AddSectorInRegistrationTable.cs" />
+    <Compile Remove="Migrations\20201122060939_AddSectorInRegistrationTable.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
