--- a/ProjectManagement.ViewModel/ProjectManagement.ViewModel.csproj
+++ b/ProjectManagement.ViewModel/ProjectManagement.ViewModel.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
