submit with error

--- a/ProjectManagement/ProjectManagement.csproj
+++ b/ProjectManagement/ProjectManagement.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\ProjectManagement.BusinessLogic\ProjectManagement.BusinessLogic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\FILES\projectReports\" />
+  </ItemGroup>
+
 </Project>
