--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,7 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/ProjectManagement/wwwroot/FILES/projectReports/066bc550-6d79-4601-87a1-8b99cd4dac98..docx
+/ProjectManagement/wwwroot/FILES/projectReports/7abb6726-3dd5-4a1e-8b19-dd8d3ec1ffff..webp
+/ProjectManagement/wwwroot/FILES/projectReports/9fe4b309-5fbb-4aca-bf28-f870c959bc83..docx
+/ProjectManagement/wwwroot/FILES/projectReports/e60e73e8-3f5d-4cf9-921b-4e94dee6d0d3..docx
